--- a/L1and2.rnw
+++ b/L1and2.rnw
@@ -58,7 +58,7 @@ dotplot <- function(x, skal=100, off=0.1, maxi=1, yfix=1, new=FALSE, ...){
 
 \title{Introduction to Biostatistics \\ Lecture 1B and 2}
 \author{Henrik Renlund}
-\date{Fall 2018}
+\date{Fall 2019}
 
 \begin{document} % >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 \frame{ % -------------------------------------------------------------------->
@@ -333,7 +333,7 @@ layout(matrix(1,nrow=1))
 @
 }
 \frame{ % -------------------------------------------------------------------->
-\frametitle{Percentiles}
+\frametitle{Percentiles (Measure of location)}
 \begin{itemize}
    \item The $k$th percentile is a value $v$ such that $k$ percent of your data lies below (or at) $v$. (Usually not uniquely defined.)
 
@@ -371,7 +371,7 @@ legend(x=0.9,y=0.4, c("Good", "Poor"), title="Outcome", lty=c(1,2), bty='n', cex
 @
 }
 \frame{ % -------------------------------------------------------------------->
-\frametitle{Average value / Measure of location}
+\frametitle{``Average value'' (Measure of location)}
 An average value is a single value meant to be
 representative of the entire data set.
 
@@ -858,15 +858,18 @@ If $X$ is N(0,1) then $\mu+\sigma X$ is N$(\mu,\sigma)$.
 <<normals>>=
 n <- 100
 x <- seq(-3,8,length.out=n)
+y0 <- dnorm(x, 0, 1)
 y1 <- dnorm(x, 4.5, 1)
 y2 <- dnorm(x, 3, 3)
 y3 <- dnorm(x, 1, 2)
 m <- max(c(y1,y2,y3))
 plot( 0, 0, col="white",ylim=c(0,m),xlim=c(-2,7),xlab="",ylab="Density")
+points(x, y0, lty = 2, type = "l")
 myCol <-  c(.blue, .green, .yellow) #brewer.pal(3,"Set2")
 for(k in 1:3){
    points( x, get( paste("y",k,sep="") ), type='l', col=myCol[k], lwd=3)
 }
+text( -1, 0.35, "N(0,1)", cex = 1, col = "lightgrey")
 text( 2.4, 0.35, "N(4.5,1)", col=myCol[1], cex=2)
 text( 1, 0.05, "N(3,3)", col=myCol[2], cex=2)
 text( -1, 0.2, "N(1,2)", col=myCol[3], cex=2)
@@ -890,8 +893,10 @@ xx <- c(xx[1],xx,xx[100])
 yy <- c(0,yy,0)
 polygon( xx,yy, col=.blue, lty=2) # col="lightblue"
 points( c(Mu-v*Sd,Mu-v*Sd), c(0,0.14), type='l', lty=2)
+text( Mu-v*Sd, 0.17, labels=paste0(round(Mu-v*Sd, 2), " ="), cex=1.5 )
 text( Mu-v*Sd, 0.15, labels=paste(Mu,"-",signif(v,3),"*",Sd,sep=""), cex=1.5 )
 points( c(Mu+v*Sd,Mu+v*Sd), c(0,0.14), type='l', lty=2)
+text( Mu+v*Sd, 0.17, labels=paste0(round(Mu+v*Sd, 2), " ="), cex=1.5 )
 text( Mu+v*Sd, 0.15, labels=paste(Mu,"+",signif(v,3),"*",Sd,sep=""), cex=1.5 )
 points( x,y, type='l', lwd=2)
 text( Mu,0.10, "95%",cex=2)
@@ -915,6 +920,7 @@ set_params <- function(){
    Min <<- min(160, min(x3))
    Max <<- max(200, max(x3))
    B <<- seq(from=145,to=215,by=2.5)
+   B2 <<- seq(from=145,to=215,by=1.25)
    yMax <<- max(
       hist(x1, freq = F, breaks=B, plot = FALSE, warn.unused = F)$density,
       hist(x2, freq = F, breaks=B, plot = FALSE, warn.unused = F)$density,
@@ -998,6 +1004,7 @@ Well\ldots if the sample is drawn at random\footnote{All possible samples are eq
 \begin{quotation}
 The estimated value 180 (cm) is on average off by 3.0  (cm).
 \end{quotation}
+
 But what \emph{is} the standard deviation of a sample mean?
 
 \rymd Consider several iterations of the procedure of drawing a sample of size 10.
@@ -1127,10 +1134,26 @@ good approximation) Normal by choosing $n$ large enough.
 }
 
 \frame{ % -------------------------------------------------------------------->
+\frametitle{Visualization of sample mean from normal population}
+The distribution of sample means from a \emph{normal} distribution.
+<<norm_mean>>=
+COL <- wes_palette("Cavalcanti1", 5) #brewer.pal(5, "Set2")
+par(mar=c(4,4,1,1))
+plot(1,1,type='n', xlim=c(0,2.5), ylim=c(0,1.8), xlab="Outcome", ylab="Density")
+ns <- c(1,2,5,10,20)
+for(k in 1:5){
+   n <- ns[k]
+   curve(dnorm(x, mean=1, sd = 1/sqrt(n)), from=-.5, to=5, add=TRUE, lty=k, col=COL[k], lwd=2)
+}
+abline(v=1, col="grey", lwd=1, lty=1)
+legend("topright", legend=c("1 (Population)", ns[-1]), col=COL, lwd=2, lty=1:4, title="Sample size", bty='n', cex=1.5)
+@
+}
+\frame{ % -------------------------------------------------------------------->
 \frametitle{Attempt to visualize CLT for the sample mean}
 The distribution of sample means from a skewed distribution.
 <<exp_mean>>=
-COL <- wes_palette("Cavalcanti", 5) #brewer.pal(5, "Set2")
+COL <- wes_palette("Cavalcanti1", 5) #brewer.pal(5, "Set2")
 par(mar=c(4,4,1,1))
 plot(1,1,type='n', xlim=c(0,2.5), ylim=c(0,1.8), xlab="Outcome", ylab="Density")
 ns <- c(1,2,5,10,20)
@@ -1282,7 +1305,7 @@ ggplot(df, aes(resid)) +
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{ } %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\subsection{} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \frame{ % -------------------------------------------------------------------->
 \frametitle{Second Summary}
